tests/mir-test/test_out/simple-moves-parse-out.txt
error: expected '\n' | ';' but got 'fn'
 --> simple-moves\root.ctl:1:92
  |
1 | struct A ; fn [T] drop(t : T) {} ; fn double_move() { let a = A\{} ; drop(a) ; drop(a) ; } fn conditional_double_move() { let a = A\{} ; if 0 == 0 { drop(a) ; } drop(a) ; } fn conditional_move() { let a = A\{} ; if 0 == 0 { drop(a) ; return ; } drop(a) ; }
  |                                                                                            ^^ token located here
  |
  = info: list

